Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
mesa
mesa
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 2,362
    • Issues 2,362
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 673
    • Merge Requests 673
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • Mesa
  • mesamesa
  • Issues
  • #3914

Closed
Open
Opened Dec 02, 2020 by ngcortes@ngcortesReporter

[g33][bisected][regression] multiple piglit failures

Issues began with mesa=3175b63a (thanks @kwg for the bisect):

Author: Marek Olšák <marek.olsak@amd.com>
Date:   Mon Sep 28 08:53:42 2020 -0400

    mesa: don't allocate matrices with malloc
    
    There is no reason for it. This removes a pointer indirection.
    
    Reviewed-by: Zoltán Böszörményi <zboszor@gmail.com>
    Acked-by: Pierre-Eric Pelloux-Prayer <pierre-eric.pelloux-prayer@amd.com>
    Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/6946>

stdout/err give different reasons for failures for subgroups. Here are some notable ones (I've grouped tests together with similar or identical output: https://mesa-ci.01.org/mesa_master_daily/builds/5719/group/63a9f0ea7bb98050796b649e85481845):

piglit.spec.arb_texture_compression.fbo-generatemipmap-formats piglit.spec.ext_texture_compression_s3tc.fbo-generatemipmap-formats:

stderr: ERROR: Test should have been failure but was crash

piglit.spec.!opengl 1_1.fog-modes piglit.spec.arb_color_buffer_float.gl_rgba8-render-sanity-fog:

... ../src/mesa/program/prog_statevars.c:1228: _mesa_load_state_parameters: Assertion `paramList->LastUniformIndex < paramList->FirstStateVarIndex' failed.

Many tests either went from failures to crashes, or there was no useful output from stdout/err (in some cases just the test commandline was printed). Let me know if you'd like a backtrace on anything.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: mesa/mesa#3914