mesa: work around an assertion failure in _mesa_load_state_parameters

Assertion `paramList->LastUniformIndex < paramList->FirstStateVarIndex'
failed.

Let's restore the old behavior for old drivers.

Fixes: 63f7d7dd0a8 - mesa: take advantage of sorted parameters in _mesa_load_state_parameters
Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/3914